# ukras-genair-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: entrypoint.sh
docs/: feature-log.md  index.md  setup-windows.md
docs/stylesheets/: extra.css
docs/tutorial/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
scripts/: gen_api_docs.py  gen_eval_docs.py
src/genair_lab/: __init__.py  abilities.py  action_knowledge.py  agent.py  default_abilities.txt  default_eval_cases.jsonl  default_prompt.txt  eval_runner.py  llm_wrapper.py  main.py  navigator.py  object_types.py  parser.py  powers.py  server.py  simple.py  tool_executor.py  tools.py
web/: app.js  index.html  styles.css
