[project]
name = "genair-lab"
version = "0.1.0"
description = "A prompt-first embodied-AI teaching lab on AI2-THOR. Edit a system prompt, watch a household robot carry out your commands live in the browser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai2thor>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "mkdocs-material>=9.7.6",
]

[project.scripts]
genair = "genair_lab.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genair_lab"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
